Fixing interface
Former-commit-id: fb3592b113c63ad1104b35b962e4c7aa22d5e32b